updating the rest of the data to the website

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <section class="details">
       <h1>Introduction</h1>
       <p>I am learning to develope software</p>
-      <h1>Where I'm From</h1>
-      <p>Details here...</p>
-      <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
-      <h1>What's your dream job?</h1>
-      <p>Details here...</p>
-      <h1>Where do you live?</h1>
-      <p>Details here...</p>
-      <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <h1>I am from Bremerton Washington</h1>
+      <p>A small city based around a naval shipyard near seattle</p>
+      <h1>I enjoy building things and comic books</h1>
+      <p>Building almost anything is interesting to me</p>
+      <h1>I eventually want to become a software engineer</h1>
+      <p>I am currently taking the UW coding bootcamp to prepare me for my future career as a software engineer</p>
+      <h1>I still live in bremerton</h1>
+      <p>Have lived here my whole life</p>
+      <h1>I like the idea of being able to create and improve things that benifit people</h1>
+      <p>Helping and improving</p>
     </section>
 
     <footer id="footer">
